--- a/epitome_1_0_0/index.html
+++ b/epitome_1_0_0/index.html
@@ -78,11 +78,10 @@
         <div class="row intro-content">
 
             <div class="column large-9 mob-full intro-text">
-                <h3>Hello, I'm John Doe</h3>
+                <h3>Hello, I'm Jordan Athey</h3>
                 <h1>
-                    Digital Designer <br>
-                    and Web Developer <br>
-                    Based In Somewhere.
+                    Software Engineer<br>
+                    Based In California.
                 </h1>
             </div>
 
