--- a/epitome_1_0_0/index.html
+++ b/epitome_1_0_0/index.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Epitome</title>
+    <title>Jordan Athey</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -43,11 +43,11 @@
     ================================================== -->
     <header class="s-header">
 
-        <div class="header-logo">
+        <!-- <div class="header-logo">
             <a class="site-logo" href="index.html">
                 <img src="images/logo.svg" alt="Homepage">
             </a>
-        </div>
+        </div> -->
 
         <nav class="header-nav-wrap">
             <ul class="header-main-nav">
@@ -58,12 +58,12 @@
                 <li><a class="smoothscroll" href="#contact" title="contact us">Say Hello</a></li>	
             </ul>
 
-            <ul class="header-social">
+            <!-- <ul class="header-social">
                 <li><a href="#0"><i class="fab fa-facebook-f" aria-hidden="true"></i></a></li>
                 <li><a href="#0"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
                 <li><a href="#0"><i class="fab fa-dribbble" aria-hidden="true"></i></a></li>
                 <li><a href="#0"><i class="fab fa-behance" aria-hidden="true"></i></a></li>
-            </ul>
+            </ul> -->
         </nav>
 
         <a class="header-menu-toggle" href="#"><span>Menu</span></a>
@@ -92,7 +92,9 @@
             </div>
 
             <div class="intro-grid"></div>
-            <div class="intro-pic"></div>
+            <!-- <div class="intro-pic">
+                <img src="images/light.jpg" alt="">
+            </div> -->
 
         </div> <!-- end row -->
 
