added more details

--- a/epitome_1_0_0/index.html
+++ b/epitome_1_0_0/index.html
@@ -76,7 +76,7 @@
     <section id="intro" class="s-intro target-section">
 
         <div class="row intro-content">
-            <div>
+            <div class='mypic-container'>
                 <img class='mypic' src="images/pict.jpg" alt="">
             </div>
 
@@ -328,9 +328,9 @@
                 <div class="masonry__brick" data-aos="fade-up">
                     <div class="item-folio">
                         <div class="item-folio__thumb">
-                            <a href="images/coc.jpg" class="thumb-link" title="Shutterbug" data-size="1050x700">
-                                <img src="images/co.jpg" 
-                                     srcset="images/co.jpg" alt="">
+                            <a href="images/cocin.jpg" class="thumb-link" title="Shutterbug" data-size="1050x700">
+                                <img src="images/cocin.jpg" 
+                                     srcset="images/ccc.jpg" alt="">
                             </a>    
                             <a href="https://github.com/connect-our-kids/mobile-app" class="item-folio__project-link" title="Project link" target="_blank"></a>
                         </div>
@@ -346,6 +346,7 @@
     
                         <div class="item-folio__caption">
                             <p>Worked with a team using React Native to transition a web app into a mobile app running on iOS and Android.</p>
+                            <p>Teach Stack: React Native / TypeScript</p>
                         </div>
                     </div>
                 </div> <!-- end masonry__brick -->
@@ -369,6 +370,7 @@
                         </div>
                         <div class="item-folio__caption">
                             <p>Worked with a team using React to Build out an app that would reduce tab cluster!</p>
+                            <p>Tech Stack: ReactJs, NodeJs, Express, ReactRedux, Sqlite3</p>
                         </div>
                         
                 </div> <!-- end masonry__brick -->
@@ -397,6 +399,7 @@
                         </div>
                         <div class="item-folio__caption">
                             <p>Implemented style features along with the HTML canvas map for heat unit. </p>
+                            <p>Teach Stack: HTML/Javascript , Django </p>
                         </div>
                     </div>
                 </div> <!-- end masonry__brick -->
