updated linkedin link

--- a/epitome_1_0_0/index.html
+++ b/epitome_1_0_0/index.html
@@ -451,7 +451,7 @@
                 <h4>Social</h4>
                 <ul>
                     <li><a href="http://www.github.com/AjileJ" title="GitHub">GitHub</a></li>
-                    <li><a href="https://www.linkedin.com/in/jordan-athey-966217194/" title="LinkedIn">LinkedIn</a></li>
+                    <li><a href="https://www.linkedin.com/in/jordanathey/" title="LinkedIn">LinkedIn</a></li>
                     <li><a href="http://twitter.com/jordanathey4" title="Twitter">Twitter</a></li>
                 </ul>
             </div>
